Closed Bug 382243 Opened 17 years ago Closed 17 years ago

SMTP servers not migrated from xpfe profile to suiterunner

Categories

(SeaMonkey :: Startup & Profiles, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ajschult784, Unassigned)

References

Details

I had 3 smtp servers defined in my XPFE profile. None of them were migrated over to my suiterunner profile. For accounts that listed the SMTP server as "" (default), the suitrunner pref panel says "Use Default Server", while any account that explicitly references a server, it says "null (Default)". None of the mail.smtpserver.* prefs made it over.
I've just checked in the fix for this - 3 missing commas on the ends of lines (affecting chatzilla, venkman, font, mail.mdn* and mail.smtpserver.* prefs). r=ajschult over irc.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.