Fix bug 382243 SMTP servers not migrated from xpfe profile to suiterunner (and also chatzilla/venkman/font prefs). r=ajschult over irc